examples/test/testpolicy8985.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8985
  namespace: namespace201
spec:
  podSelector:
    matchLabels:
      key28: value1
      key23: value24
      key35: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value8
          key48: value17
      podSelector:
        matchLabels:
          key16: value47
